# sdl-pog

./: -lSDL2  .gitignore  CMakeLists.txt  Makefile  game.cpp  game.hpp  main.cpp  rpg  sprite.cpp  sprite.hpp  texturemanager.cpp  texturemanager.hpp
rpg/: CMakeLists.txt  game.cpp  main.cpp
